# story-fab

./: .eslintignore  .eslintrc.json  .gitignore  .mailmap  CHANGELOG.md  README.md  babel.config.js  index.html  install.sh  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-docs.yml  main.yml  release.yml  windows-release.yml
docs/: CHANGELOG.md  index.md
docs/.vitepress/: config.ts
docs/dev/: ai-services.md  architecture.md  backend.md  build-release.md  commentary-workflow.md  director-agent.md  frontend.md  project-structure.md  script-generation.md  tauri-commands.md
docs/guide/: ai-analysis.md  index.md  (+7 more)
scripts/: check-bundle-budget.mjs  code-review-dashboard.mjs  code-review-dashboard.ts  compute-coverage.py
src/: App.css  App.tsx  env.d.ts  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binary.rs  highlight_detector.rs  lib.rs  main.rs  smart_segmenter.rs  subtitle.rs  types.rs  utils.rs  video_processor.rs
src-tauri/src/commands/: ai.rs  auto_save.rs  export_state.rs  ffprobe.rs  file_ops.rs  llm.rs  mod.rs  project.rs
src-tauri/src/commands/commentary/: commentary_synthesizer.rs  director.rs  mod.rs  script_generator.rs
src-tauri/src/commands/render/: autonomous_cut.rs  ffmpeg_builder.rs  mod.rs  preview.rs  subtitle_burnin.rs  transcode.rs
styles/: _film-variables.less  _mixins.less  variables.less
tsc-report/: tsc-report-src.txt  tsc-report.txt
(+384 files in other folders)
