[package]
name = "story-fab"
version = "2.0.0"
description = "story-fab - AI 驱动的专业智能视频剪辑工具"
authors = ["Agions <agions@qq.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "story_fab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
urlencoding = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "fs"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
dirs = "6"
futures-util = "0.3"

[profile.release]
# Maximum size optimization — thin LTO → fat LTO for best cross-crate inlining
lto           = "fat"
codegen-units = 1
strip         = true
opt-level     = "z"   # "z" > "s" for minimum binary size
panic         = "abort"
# Optional: enable inlining across crates for better runtime performance
overflow-checks = false
